--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "assignment2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://StefanBuzu/Pokedex_assignment",
+  "homepage": "https://StefanBuzu.github.io/Pokedex_assignment",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
